2010-07-07  Sam Weinig  <sam@webkit.org>

        Reviewed by Mark Rowe.

        Don't hard code the Mac OS X 10.6 SDK for MiniBrowser. 

        * MiniBrowser/MiniBrowser.xcodeproj/project.pbxproj:

2010-07-07  Anders Carlsson  <andersca@apple.com>

        Use the correct XP_MACOSX define instead of XP_MAC. This was causing test failures on some platforms.

        * DumpRenderTree/TestNetscapePlugIn/main.cpp:
        (NPP_New):
        (NPP_HandleEvent):

2010-07-07  Brian Weinstein  <bweinstein@apple.com>

        Reviewed by Adam Roben.

        Need to have a way to specify different results for Windows XP and 7
        https://bugs.webkit.org/show_bug.cgi?id=41776
        
        Add the ability to have platform/win-xp, platform/win-vista, and platform/win-7
        subdirectories, so we can have different results for tests on Windows XP, Windows
        Vista, and Windows 7.

        Windows XP will try the order: win-xp, win-vista, win-7, win, mac-snowleopard, mac.
        Windows Vista will try the order: win-vista, win-7, win, mac-snowleopard, mac.
        Windows 7 will try the order: win-7, win, mac-snowleopard, mac.

        This matches the behavior of the mac.

        * Scripts/old-run-webkit-tests: Add multiple platforms for Windows, and if we are on XP
            or Vista, try looking in other win-* subdirectories before win.
        * Scripts/webkitdirs.pm: Add some helper functions to determine what version of Windows
            we are running.

2010-07-07  Kent Tamura  <tkent@chromium.org>

        Reviewed by Dimitri Glazkov.

        [DRT/Chromium] Remove ASSERT_NOT_REACHED in some functions
        https://bugs.webkit.org/show_bug.cgi?id=41753

        The original code of the following functions in
        test_shell_devtools_client.cc have NOTIMPLEMENTED(), not
        ASSERT_NOT_REACHED(). The program shouldn't stop at these
        functions.

        * DumpRenderTree/chromium/DRTDevToolsClient.cpp: